--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="shortcut icon" href="images/favicon.ico" />
-      <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta charset="utf-8">
-      <title>Electronic Portfolio</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet'>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Electronic Portfolio</title>
   </head>
   <body>
     <div class="container my-container">
@@ -31,9 +31,9 @@
         </div>
       </div>
       <div class="row text-left">
-          <div class="col-md-12">
-            <h2>Featured Work</h2>
-          </div>
+        <div class="col-md-12">
+          <h2>Featured Work</h2>
+        </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
