Edit css and html to conform to style guide and code comments

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/favicon.ico">
-    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Electronic Portfolio</title>
@@ -15,46 +15,46 @@
     <div class="container my-container">
       <header>
         <div class="row">
-          <div class="col-sm-1 col-md-1">
+          <div class="col-sm-1">
             <img class="title-logo img-responsive" src="images/jennieLogo2.png" alt="Logo">
           </div>
-          <div class="col-sm-11 col-md-11 text-right">
-            <h1><span class="turnRed">i</span> am <span class="turnGreen">J</span>ennie <span class="turnGreen">B</span>uechne<span class ="turnRed">r</span></h1>
-            <h3 class="no-margin"><span class="turnRed">i</span> <span class="turnGreen">l</span>ove to <span class="turnGreen">c</span>od<span class="turnRed">e</span></h3>
-            <h3 class="no-margin"><span class="turnRed">t</span>his is <span class="turnGreen">m</span>y <span class="turnGreen">p</span>ortfoli<span class="turnRed">o</span></h3>
+          <div class="col-sm-11 text-right">
+            <h1><span class="turn-red">i</span> am <span class="turn-green">J</span>ennie <span class="turn-green">B</span>uechne<span class ="turn-red">r</span></h1>
+            <h3 class="no-margin"><span class="turn-red">i</span> <span class="turn-green">l</span>ove to <span class="turn-green">c</span>od<span class="turn-red">e</span></h3>
+            <h3 class="no-margin"><span class="turn-red">t</span>his is <span class="turn-green">m</span>y <span class="turn-green">p</span>ortfoli<span class="turn-red">o</span></h3>
           </div>
         </div>
       </header>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
           <img src="images/rugby-banner.jpg" class="img-responsive center-block shadow" alt="Rugby ball and scrum cap on a field">
         </div>
       </div>
       <div class="row text-left">
-        <div class="col-md-12">
+        <div class="col-xs-12">
           <h2>Featured Work</h2>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="images/rugby-1.jpg" class="img-responsive center-block desaturate shadow" alt="Rugby player playing defence" data-toggle="modal" data-target="#project1">
+          <img src="images/rugby-1.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player playing defence" data-toggle="modal" data-target="#project1">
           <h4>Defence</h4>
-          <p class="margin-below">
-            <a href="https://www.youtube.com/watch?v=Ajr5sYKNQe4" class="appLink">https://github.com/udacity/<span>defence</span>/</a>
+          <p>
+            <a href="https://www.youtube.com/watch?v=Ajr5sYKNQe4" class="app-link">https://github.com/udacity/<span class=" turn-green short-fade">defence</span>/</a>
           </p>
         </div>
         <div class="col-md-4">
-          <img src="images/rugby-2.jpg" class="img-responsive center-block desaturate shadow" alt="Rugby player getting tackled" data-toggle="modal" data-target="#project2">
+          <img src="images/rugby-2.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player getting tackled" data-toggle="modal" data-target="#project2">
           <h4>Possession</h4>
-          <p class="margin-below">
-            <a href="https://www.youtube.com/watch?v=G9B1liryS0g" class="appLink">https://github.com/udacity/<span>possession</span>/</a>
+          <p>
+            <a href="https://www.youtube.com/watch?v=G9B1liryS0g" class="app-link">https://github.com/udacity/<span class="turn-green short-fade">possession</span>/</a>
           </p>
         </div>
         <div class="col-md-4">
-          <img src="images/rugby-3.jpg" class="img-responsive center-block desaturate shadow" alt="Pregnant rugby player" data-toggle="modal" data-target="#project3">
+          <img src="images/rugby-3.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Pregnant rugby player" data-toggle="modal" data-target="#project3">
           <h4>Rugby Love</h4>
-          <p class="margin-below">
-            <a href="https://twitter.com/hashtag/rugbylove" class="appLink">https://github.com/udacity/<span>rugbylove</span>/</a>
+          <p>
+            <a href="https://twitter.com/hashtag/rugbylove" class="app-link">https://github.com/udacity/<span class="turn-green short-fade">rugbylove</span>/</a>
           </p>
         </div>
       </div>
