--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet'>
+    <link href="http://fonts.googleapis.com/css?family=Fresca" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/favicon.ico">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -37,21 +37,27 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="images/rugby-1.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player playing defence" data-toggle="modal" data-target="#project1">
+          <a href="#">
+            <img src="images/rugby-1.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player playing defence" data-toggle="modal" data-target="#project1">
+          </a>
           <h4>Defence</h4>
           <p>
             <a href="https://www.youtube.com/watch?v=Ajr5sYKNQe4" class="app-link">https://github.com/udacity/<span class=" turn-green short-fade">defence</span>/</a>
           </p>
         </div>
         <div class="col-md-4">
-          <img src="images/rugby-2.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player getting tackled" data-toggle="modal" data-target="#project2">
+          <a href="#">
+            <img src="images/rugby-2.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player getting tackled" data-toggle="modal" data-target="#project2">
+          </a>
           <h4>Possession</h4>
           <p>
             <a href="https://www.youtube.com/watch?v=G9B1liryS0g" class="app-link">https://github.com/udacity/<span class="turn-green short-fade">possession</span>/</a>
           </p>
         </div>
         <div class="col-md-4">
-          <img src="images/rugby-3.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Pregnant rugby player" data-toggle="modal" data-target="#project3">
+          <a href= "#">
+            <img src="images/rugby-3.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Pregnant rugby player" data-toggle="modal" data-target="#project3">
+          </a>
           <h4>Rugby Love</h4>
           <p>
             <a href="https://twitter.com/hashtag/rugbylove" class="app-link">https://github.com/udacity/<span class="turn-green short-fade">rugbylove</span>/</a>
