Implement Gray by Karl Horky

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <a href="#">
-            <img src="images/rugby-1.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player playing defence" data-toggle="modal" data-target="#project1">
+            <img src="images/rugby-1.jpg" class="img-responsive center-block shadow grayscale grayscale-fade" alt="Rugby player playing defence" data-toggle="modal" data-target="#project1">
           </a>
           <h4>Defence</h4>
           <p>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-4">
           <a href="#">
-            <img src="images/rugby-2.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Rugby player getting tackled" data-toggle="modal" data-target="#project2">
+            <img src="images/rugby-2.jpg" class="img-responsive center-block shadow grayscale grayscale-fade" alt="Rugby player getting tackled" data-toggle="modal" data-target="#project2">
           </a>
           <h4>Possession</h4>
           <p>
@@ -56,7 +56,7 @@
         </div>
         <div class="col-md-4">
           <a href= "#">
-            <img src="images/rugby-3.jpg" class="img-responsive center-block desaturate shadow long-fade" alt="Pregnant rugby player" data-toggle="modal" data-target="#project3">
+            <img src="images/rugby-3.jpg" class="img-responsive center-block shadow grayscale grayscale-fade" alt="Pregnant rugby player" data-toggle="modal" data-target="#project3">
           </a>
           <h4>Rugby Love</h4>
           <p>
@@ -116,5 +116,6 @@
         </div>
       </div>
     </div>
+    <script src="/js/jquery.gray.min.js"></script>
   </body>
 </html>
